modules/015-admission-policy-engine/charts/constraint-templates/templates/security/allowed-selinux.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: d8selinux
  labels:
    heritage: deckhouse
    module: admission-policy-engine
    security.deckhouse.io: security-policy
  annotations:
    metadata.gatekeeper.sh/title: "SELinux V2"
    metadata.gatekeeper.sh/version: 1.0.0
    description: >-
      Defines an allow-list of seLinuxOptions configurations for pod
      containers. Corresponds to a PodSecurityPolicy requiring SELinux configs.
      For more information, see
      https://kubernetes.io/docs/concepts/policy/pod-security-policy/#selinux
spec:
  crd:
    spec:
      names:
        kind: D8SeLinux
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          type: object
          description: >-
            Defines an allow-list of seLinuxOptions configurations for pod
            containers. Corresponds to a PodSecurityPolicy requiring SELinux configs.
            For more information, see
            https://kubernetes.io/docs/concepts/policy/pod-security-policy/#selinux
          properties:
            allowedSELinuxOptions:
              type: array
              description: "An allow-list of SELinux options configurations."
              items:
                type: object
                description: "An allowed configuration of SELinux options for a pod container."
                properties:
                  level:
                    type: string
                    description: "An SELinux level."
                  role:
                    type: string
                    description: "An SELinux role."
                  type:
                    type: string
                    description: "An SELinux type."
                  user:
                    type: string
                    description: "An SELinux user."
  targets:
    - target: admission.k8s.gatekeeper.sh
      code:
        - engine: Rego
          source:
            version: "v1"
            libs:
              - |
                {{- include "constraint-templates.lib.common.container-review" . | nindent 16 }}
              - |
                {{- include "constraint-templates.lib.check_object_match" . | nindent 16 }}
              - |
                {{- include "constraint-templates.lib.exception.spe" . | nindent 16 }}
              - |
                {{- include "constraint-templates.lib.message" . | nindent 16 }}
            rego: |
              package d8.security_policies

              import data.lib.check_object_match.check_partial_match_in_list
              import data.lib.common.has_field
              import data.lib.common.input_containers
              import data.lib.common.pod_spec
              import data.lib.common.object_labels
              import data.lib.common.object_namespace
              import data.lib.exception.allowed_values_or_empty
              import data.lib.exception.resolve_spe_for_container
              import data.lib.exception.resolve_spe_from_labels
              import data.lib.message.violation_message
              import data.lib.common.review_kind

              # Disallow top-level custom SELinux options
              violation contains {"msg": msg, "details": object.union(result.detail, {"field": "seLinuxOptions"})} if {
                not input.review.operation == "DELETE"
                has_field(pod_spec.securityContext, "seLinuxOptions")
                labels := object_labels
                spe := resolve_spe_from_labels(labels, object_namespace)
                spe_allowed := allowed_values_or_empty(spe, ["spec", "securityContext", "seLinuxOptions", "allowedValues"])
                result := check_partial_match_in_list(
                  pod_spec.securityContext.seLinuxOptions,
                  input.parameters.allowedSELinuxOptions,
                  ["level", "role", "type", "user"],
                  spe_allowed
                )
                not result.allowed
                msg := violation_message("SELinux options are not allowed", sprintf("%v: %v", [review_kind, input.review.object.metadata.name]), result.detail)
              }

              # Disallow container-level custom SELinux options
              violation contains {"msg": msg, "details": object.union(result.detail, {"container": c.name, "field": "seLinuxOptions"})} if {
                not input.review.operation == "DELETE"
                c := input_security_context[_]
                has_field(c.securityContext, "seLinuxOptions")
                labels := object_labels
                spe := resolve_spe_for_container(c, labels, object_namespace)
                spe_allowed := allowed_values_or_empty(spe, ["spec", "securityContext", "seLinuxOptions", "allowedValues"])
                result := check_partial_match_in_list(
                  c.securityContext.seLinuxOptions,
                  input.parameters.allowedSELinuxOptions,
                  ["level", "role", "type", "user"],
                  spe_allowed
                )
                not result.allowed
                msg := violation_message("SELinux options are not allowed", sprintf("%v: %v, container: %v", [review_kind, input.review.object.metadata.name, c.name]), result.detail)
              }

              input_security_context contains c if {
                c := input_containers[_]
                has_field(c.securityContext, "seLinuxOptions")
              }
