modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-selinux/constraint_security_policy.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: D8SeLinux
metadata:
  name: test
spec:
  enforcementAction: "deny"
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: security.deckhouse.io/pod-policy
          operator: In
          values:
          - baseline
          - restricted
  parameters:
    allowedSELinuxOptions:
    - type: sometype
      level: somelevel
      role: somerole
      user: someuser
