modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-selinux/test_samples/constraint_templates/pss_baseline/002-allowed-container-init-t-securityContext-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-container-init-t-securityContext-container
  namespace: testns
spec:
  containers:
    - name: nginx
      image: nginx
      securityContext:
        seLinuxOptions:
          type: container_init_t
