modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-selinux/test_samples/constraint_templates/pss_baseline/005-allowed-daemonset-no-selinux.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: allowed-daemonset-no-selinux
  namespace: testns
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
